# hello_moveit

./: README.md  fanuc moveit启动日志.txt  ros2.md  so100  moveit启动日志.txt  tmp.txt
fanuc_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fanuc_moveit_config/config/: fanuc.ros2_control.xacro  fanuc.srdf  fanuc.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fanuc_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fanuc_moveit_urdf/: CMakeLists.txt  package.xml
fanuc_moveit_urdf/urdf/: fanuc.urdf
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/moveit/urdf/: x1.urdf
hello_moveit/src/: hello_moveit.cpp
joycon/: demo.ipynb  package.xml  setup.cfg  setup.py
joycon/joycon/: pose_pub.py
left_mojia_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
left_mojia_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  mojia.ros2_control.xacro  mojia.srdf  mojia.urdf.xacro  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
left_mojia_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mojia/: playback.py
mojia/trajectory/: go.csv  left_chest.csv  left_go.csv  right_say.csv
mojia_moveit_config/: CMakeLists.txt  package.xml
mojia_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  mojia.ros2_control.xacro  mojia.srdf  moveit_controllers.yaml  ros2_controllers.yaml
mojia_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
so100_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
so100_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so100.ros2_control.xacro  so100.srdf  so100.urdf.xacro
so100_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
so100_moveit_urdf/: CMakeLists.txt  package.xml
so100_moveit_urdf/urdf/: so100.urdf
x1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  x1_hardware_interface_plugin.xml
x1_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml  x1.ros2_control.xacro  x1.srdf  x1.urdf.xacro
x1_moveit_config/include/x1_moveit_config/: x1_system_interface.hpp
x1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  perception_pipeline_demo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
x1_moveit_config/src/: x1_system_interface.cpp
x1_moveit_config_double/: .setup_assistant  CMakeLists.txt  package.xml
x1_moveit_config_double/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  x1.ros2_control.xacro  x1.srdf
x1_moveit_config_double/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
x1_moveit_proto/: CMakeLists.txt  package.xml
x1_moveit_proto/msg/: Joycon.msg
x1_moveit_proto/srv/: IkSolve.srv  JoyconCommand.srv
x1_moveit_service/: CMakeLists.txt  package.xml
x1_moveit_service/src/: x1_moveit_ik.cpp  x1_moveit_ik_service.cpp  x1_moveit_rviz.cpp  x1_moveit_rviz_http_service.cpp  x1_moveit_service.cpp
x1_moveit_urdf/: CMakeLists.txt  package.xml
(+29 files in other folders)
