<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joycon</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shelbin@huggingface.com">yons</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>x1_moveit_proto</depend>

  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
